feat: note model and mapping user
* feat: installed uuid package

* feat: updated user schema and created note schema with m-n mapping

* feat: created Note & SaveNoteRequest models, updated User model

* feat: created note.service

* feat: created note controller

* fix: updated routes and misc updates

* docs: updated swagger.json

* feat: created GetNotesResponse model

* fix: lint error

* chore: updated git config to not ignore casing in fileNames
