# src/models/Note.ts
@@ -1,0 +1,9 @@
+export interface Note {
+  id?: number;
+  createdAt: Date;
+  updatedAt: Date;
+  noteId: string;
+  title: string;
+  content: string;
+  ownerId: string;
+}
